@@ -31,7 +31,7 @@ conditions for modified versions, except that this
 permission notice may be stated in a translation approved
 by the Free Software Foundation.
  -->
-<!-- Created on March, 23 2008 by texi2html 1.79 -->
+<!-- Created on May 16, 2008 by texi2html 1.79 -->
 <!--
 Written by: Lionel Cons <Lionel.Cons@cern.ch> (original author)
             Karl Berry  <karl@freefriends.org>
@@ -1927,16 +1927,16 @@ for the description.
 
 <p>If <a name="IDX109"></a>
 <code>$USE_ACCESSKEY</code> is set, the <code>accesskey</code> attribute 
-is used in navigation if split at nodes. In that case the 
-<a name="IDX110"></a>
-<code>%BUTTONS_ACCESSKEY</code> hash is used for the access key.
+is used in navigation. In that case the <a name="IDX110"></a>
+<code>%BUTTONS_ACCESSKEY</code> 
+hash is used for the access key.
 </p>
 <p>Similarly, if 
 If <a name="IDX111"></a>
-<code>$USE_REL_REV</code> is set, the <code>rel</code> attribute 
-is used in navigation if split at nodes. In that case the 
-<a name="IDX112"></a>
-<code>%BUTTONS_REL</code> hash is used for the rel attribute.
+<code>$USE_REL_REV</code> is set, the <code>rel</code> attribute is used 
+in navigation. In that case the <a name="IDX112"></a>
+<code>%BUTTONS_REL</code> hash is used for 
+the rel attribute.
 </p>
 
 <hr size="6">
@@ -5118,7 +5118,7 @@ otherwise the format with tables is used (this is the default).
 </p>
 <p>If <a name="IDX276"></a>
 <code>$USE_ACCESSKEY</code> is set, the <code>accesskey</code> attribute 
-is used in anchors if split at nodes. In that case the <a name="IDX277"></a>
+is used in anchors. In that case the <a name="IDX277"></a>
 <code>%BUTTONS_ACCESSKEY</code>
 hash is used for the access key.
 </p>
@@ -7212,7 +7212,7 @@ text
 </tr></table>
 <h1>About This Document</h1>
 <p>
-  This document was generated by <em>Patrice Dumas</em> on <em>March, 23 2008</em> using <a href="http://www.nongnu.org/texi2html/"><em>texi2html 1.79</em></a>.
+  This document was generated by <em>Patrice Dumas</em> on <em>May 16, 2008</em> using <a href="http://www.nongnu.org/texi2html/"><em>texi2html 1.79</em></a>.
 </p>
 <p>
   The buttons in the navigation panels have the following meaning:
@@ -7314,7 +7314,7 @@ text
 <hr size="1">
 <p>
  <font size="-1">
-  This document was generated by <em>Patrice Dumas</em> on <em>March, 23 2008</em> using <a href="http://www.nongnu.org/texi2html/"><em>texi2html 1.79</em></a>.
+  This document was generated by <em>Patrice Dumas</em> on <em>May 16, 2008</em> using <a href="http://www.nongnu.org/texi2html/"><em>texi2html 1.79</em></a>.
  </font>
  <br>
 
