@@ -3,7 +3,7 @@ $LANGUAGES->{'de'} = {
                        '  where the @strong{ Example } assumes that the current position is at @strong{ Subsubsection One-Two-Three } of a document of the following structure:' => ' wobei das @strong{ Beispiel } annimmt, dass die aktuelle Position bei @strong{ Unterabschnitt 1-2-3 } in einem Dokument mit folgender Struktur liegt:',
                        ' Up ' => ' Nach oben ',
                        '%{acronym_like} (%{explanation})' => '%{acronym_like} (%{explanation})',
-                       '%{month}, %{day} %{year}' => '%{day}. %{month} %{year}',
+                       '%{month} %{day}, %{year}' => '%{day}. %{month} %{year}',
                        '%{name} of %{class}' => '',
                        '%{name} on %{class}' => '',
                        '%{node_file_href}' => '',
