@@ -3,7 +3,7 @@ $LANGUAGES->{'es'} = {
                        '  where the @strong{ Example } assumes that the current position is at @strong{ Subsubsection One-Two-Three } of a document of the following structure:' => '',
                        ' Up ' => '',
                        '%{acronym_like} (%{explanation})' => '',
-                       '%{month}, %{day} %{year}' => '',
+                       '%{month} %{day}, %{year}' => '',
                        '%{name} of %{class}' => '',
                        '%{name} on %{class}' => '',
                        '%{node_file_href}' => '',
