@@ -3,7 +3,7 @@ $LANGUAGES->{'pt_BR'} = {
                           '  where the @strong{ Example } assumes that the current position is at @strong{ Subsubsection One-Two-Three } of a document of the following structure:' => '  onde o @strong{ Exemplo } assume que a posi@,{c}@~ao atual localiza-se em @strong{ Subsub@,{c}@~ao Um-Dois-Tr@^es } de um documento com a seguinte estrutura:',
                           ' Up ' => ' Acima ',
                           '%{acronym_like} (%{explanation})' => '',
-                          '%{month}, %{day} %{year}' => '%{day} de %{month} de %{year}',
+                          '%{month} %{day}, %{year}' => '%{day} de %{month} de %{year}',
                           '%{name} of %{class}' => '%{name} da %{class}',
                           '%{name} on %{class}' => '%{name} na %{class}',
                           '%{node_file_href}' => '',
