@@ -3,7 +3,7 @@ $LANGUAGES->{'fr'} = {
                        '  where the @strong{ Example } assumes that the current position is at @strong{ Subsubsection One-Two-Three } of a document of the following structure:' => '  Dans cet exemple on est @`a @strong{ Sous section un-deux-trois } dans un document dont la structure est :',
                        ' Up ' => 'Plus haut',
                        '%{acronym_like} (%{explanation})' => '',
-                       '%{month}, %{day} %{year}' => 'le %{day} %{month} %{year}',
+                       '%{month} %{day}, %{year}' => 'le %{day} %{month} %{year}',
                        '%{name} of %{class}' => '%{name} de %{class}',
                        '%{name} on %{class}' => '%{name} de %{class}',
                        '%{node_file_href}' => '',
@@ -182,7 +182,7 @@ $LANGUAGES->{'pt_BR'} = {
                           '  where the @strong{ Example } assumes that the current position is at @strong{ Subsubsection One-Two-Three } of a document of the following structure:' => '  onde o @strong{ Exemplo } assume que a posi@,{c}@~ao atual localiza-se em @strong{ Subsub@,{c}@~ao Um-Dois-Tr@^es } de um documento com a seguinte estrutura:',
                           ' Up ' => ' Acima ',
                           '%{acronym_like} (%{explanation})' => '',
-                          '%{month}, %{day} %{year}' => '%{day} de %{month} de %{year}',
+                          '%{month} %{day}, %{year}' => '%{day} de %{month} de %{year}',
                           '%{name} of %{class}' => '%{name} da %{class}',
                           '%{name} on %{class}' => '%{name} na %{class}',
                           '%{node_file_href}' => '',
@@ -336,7 +336,7 @@ $LANGUAGES->{'nl'} = {
                        '  where the @strong{ Example } assumes that the current position is at @strong{ Subsubsection One-Two-Three } of a document of the following structure:' => '',
                        ' Up ' => '',
                        '%{acronym_like} (%{explanation})' => '',
-                       '%{month}, %{day} %{year}' => '',
+                       '%{month} %{day}, %{year}' => '',
                        '%{name} of %{class}' => '',
                        '%{name} on %{class}' => '',
                        '%{node_file_href}' => '',
@@ -469,7 +469,7 @@ $LANGUAGES->{'ja'} = {
                        '  where the @strong{ Example } assumes that the current position is at @strong{ Subsubsection One-Two-Three } of a document of the following structure:' => '@strong{例}では、以下に示す構造を持つ文書の@strong{1.2.3項}を現在位置に仮定しています。',
                        ' Up ' => '上',
                        '%{acronym_like} (%{explanation})' => '',
-                       '%{month}, %{day} %{year}' => '%{year}年%{month}月%{day}日',
+                       '%{month} %{day}, %{year}' => '%{year}年%{month}月%{day}日',
                        '%{name} of %{class}' => '',
                        '%{name} on %{class}' => '',
                        '%{node_file_href}' => '',
@@ -620,7 +620,7 @@ $LANGUAGES->{'pt'} = {
                        '  where the @strong{ Example } assumes that the current position is at @strong{ Subsubsection One-Two-Three } of a document of the following structure:' => '  onde o @strong{ Exemplo } assume que a posi@,{c}@~ao atual localiza-se em @strong{ Subsub@,{c}@~ao Um-Dois-Tr@^es } de um documento com a seguinte estrutura:',
                        ' Up ' => ' Acima ',
                        '%{acronym_like} (%{explanation})' => '',
-                       '%{month}, %{day} %{year}' => '%{day} de %{month} de %{year}',
+                       '%{month} %{day}, %{year}' => '%{day} de %{month} de %{year}',
                        '%{name} of %{class}' => '%{name} da %{class}',
                        '%{name} on %{class}' => '%{name} na %{class}',
                        '%{node_file_href}' => '',
@@ -774,7 +774,7 @@ $LANGUAGES->{'de'} = {
                        '  where the @strong{ Example } assumes that the current position is at @strong{ Subsubsection One-Two-Three } of a document of the following structure:' => ' wobei das @strong{ Beispiel } annimmt, dass die aktuelle Position bei @strong{ Unterabschnitt 1-2-3 } in einem Dokument mit folgender Struktur liegt:',
                        ' Up ' => ' Nach oben ',
                        '%{acronym_like} (%{explanation})' => '%{acronym_like} (%{explanation})',
-                       '%{month}, %{day} %{year}' => '%{day}. %{month} %{year}',
+                       '%{month} %{day}, %{year}' => '%{day}. %{month} %{year}',
                        '%{name} of %{class}' => '',
                        '%{name} on %{class}' => '',
                        '%{node_file_href}' => '',
@@ -907,7 +907,7 @@ $LANGUAGES->{'en'} = {
                        '  where the @strong{ Example } assumes that the current position is at @strong{ Subsubsection One-Two-Three } of a document of the following structure:' => '',
                        ' Up ' => '',
                        '%{acronym_like} (%{explanation})' => '',
-                       '%{month}, %{day} %{year}' => '',
+                       '%{month} %{day}, %{year}' => '',
                        '%{name} of %{class}' => '',
                        '%{name} on %{class}' => '',
                        '%{node_file_href}' => '',
@@ -1036,7 +1036,7 @@ $LANGUAGES->{'es'} = {
                        '  where the @strong{ Example } assumes that the current position is at @strong{ Subsubsection One-Two-Three } of a document of the following structure:' => '',
                        ' Up ' => '',
                        '%{acronym_like} (%{explanation})' => '',
-                       '%{month}, %{day} %{year}' => '',
+                       '%{month} %{day}, %{year}' => '',
                        '%{name} of %{class}' => '',
                        '%{name} on %{class}' => '',
                        '%{node_file_href}' => '',
@@ -1169,7 +1169,7 @@ $LANGUAGES->{'no'} = {
                        '  where the @strong{ Example } assumes that the current position is at @strong{ Subsubsection One-Two-Three } of a document of the following structure:' => '',
                        ' Up ' => '',
                        '%{acronym_like} (%{explanation})' => '',
-                       '%{month}, %{day} %{year}' => '',
+                       '%{month} %{day}, %{year}' => '',
                        '%{name} of %{class}' => '',
                        '%{name} on %{class}' => '',
                        '%{node_file_href}' => '',
